# homeworks

./: README.md  requiremens.txt  requirements.txt
homework_01/: Readme.md  main.py
homework_02/: README.md  base.py  car.py  engine.py  plane.py
homework_03/: Dockerfile
homework_03/app/: app.py  pyproject.toml
homework_04/: docker-compose.yaml  jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/static/css/: index.css
homework_05/templates/: about.html  add_items.html  base.html
homework_05/views/: about.py  items.py
homework_06/: Dockerfile  README.md  app.py  config.py  docker-compose.yaml  main.py  postgres.env  requirements.txt
homework_06/models/: __init__.py  database.py  post.py  user.py
homework_06/static/css/: index.css
homework_06/templates/: base.html  post_list.html  user_list.html
homework_06/views/: __init__.py  posts.py  users.py
